# Construction---Building-System-Ai-powered-Stage-1

./: README.md  document.md  pyproject.toml
backend/: archai.db  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  design.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  security.py
backend/app/domains/: __init__.py
backend/app/domains/geometry/: __init__.py  engine.py
backend/app/domains/layout/: __init__.py  engine.py
backend/app/domains/optimization/: __init__.py  engine.py
backend/app/domains/rendering/: __init__.py
backend/app/domains/soil/: __init__.py  engine.py
backend/app/domains/structural/: __init__.py  engine.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: __init__.py  design.py
backend/app/services/: __init__.py
backend/tests/unit/: test_geometry.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/drawing/: PlotDrawing.tsx
frontend/src/components/viewer/: BuildingViewer.tsx
frontend/src/pages/: DashboardPage.tsx  DesignPage.tsx  LoginPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
